@@ -1,0 +1,107 @@
+// 
+// DebugStringVisitor.cs
+// 
+// Author:
+//   Michael Hutchinson <mhutchinson@novell.com>
+// 
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
+// 
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+//
+
+using System;
+using System.Text;
+
+using AspNetAddIn.Parser.Tree;
+
+namespace AspNetAddIn.Parser
+{
+	
+	internal class DebugStringVisitor : Visitor
+	{
+		StringBuilder debugString = new StringBuilder ();
+		int indent = 0;
+		
+		public string DebugString {
+			get { return debugString.ToString (); }
+		}
+		
+		public void Clear ()
+		{
+			debugString = new StringBuilder ();
+			indent = 0;
+		}
+		
+		public override void Visit (DirectiveNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+		}
+		
+		public override void Visit (TextNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+		}
+		
+		public override void Visit (TagNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+			indent++;
+		}
+		
+		public override void Visit (ExpressionNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+		}
+		
+		public override void Visit (RootNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+		}
+		
+		public override void Visit (ServerCommentNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.AppendLine (node.ToString ());
+		}
+		
+		public override void Visit (ServerIncludeNode node)
+		{
+			debugString.Append ('\t', indent);
+			debugString.Append (node.ToString ());
+			debugString.AppendLine ();
+		}
+		
+		public override void Leave (ParentNode node)
+		{
+			indent--;
+		}
+
+	}
+}
