@@ -1,3 +1,15 @@
+2008-02-26  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* AspNetAddIn.mdp, Makefile.am, Parser/Tree/ParentNode.cs,
+	  Parser/Tree/ServerCommentNode.cs, Parser/Tree/Visitor.cs,
+	  Parser/Tree/TagNode.cs, Parser/Tree/DirectiveNode.cs,
+	  Parser/Tree/Node.cs, Parser/Tree/ExpressionNode.cs,
+	  Parser/Tree/RootNode.cs, Parser/Tree/TextNode.cs,
+	  Parser/DebugStringVisitor.cs, Parser/Document.cs,
+	  Parser/Internal/Location.cs: Implement dumping a debug view of the parse
+	  tree, and binary searching for the parse node at a given location in the
+	  file.
+
 2008-02-23  Mike Krüger <mkrueger@novell.com> 
 
 	* AspNetAddIn.mdp, Makefile.am: Removed some unused glade and gnome-sharp
